usgs toolbox dotspatial migration updates
-enable timeseries statistics in dotspatial
-template for statusmonitor
-additional demo ui components

--- a/BASINSDS/MainForm.resx
+++ b/BASINSDS/MainForm.resx
@@ -130,4 +130,17 @@
         Y2F0aW9uIEV4dGVuc2lvbnMGBQAAAAdQbHVnaW5zDQIL
 </value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFBQQAAEABACoAQAAFgAAACgAAAAUAAAAKAAAAAEABAAAAAAAAAAAAEcAAABHAAAAEAAAAAAA
+        AAAzZgAAZmYAAGaZMwCZmTMAzMyZAMDAwABmmQAAmcyZAJmZmQCZmWYAzJmZAGaZZgCZzGYA/8zMAAAA
+        AAAAAAAAARARARARERAQEAAAEQEQEBEBAQEBEQAAARARAQEBEBEQEAAAEBEBEBERARAjIQAAARARARAQ
+        ECRVVQAAEQEQEQEBEjERJQAAVhARARAQN1SCEAAAVZEBEBEZo7dVkQAAFFQRAQEiIhEVVAAAEJVZM5VV
+        VVIRJQAAgRFFV0YRA1XBEQAAVSEQJIVZEBhVIQAANV1VWTJFUxAlWQAAATIyEBAWVXERdQAAQjeQEQEQ
+        GVUhEgAAVcEBEBEBECVXEQAAARARARARARCVUgAAEQEAEAEAEAECVQAAARERERERERERGAAAEBAQEBAQ
+        EBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
