--- a/HSPEXP/install.txt
+++ b/HSPEXP/install.txt
@@ -1,10 +1,11 @@
-Date: 11/5/2019
+Date: 2/21/2020
 
 HSPEXP+3.1
 
 New Features:
 1. New option to support SNOW calibration. See HSPEXP+ documentation.
 2. Complete documentation of all constituent balance reports in Appendix A.
+3. Refined WASP setup for WASP8 compatibility.
 
 
 Date: 10/15/2019
