--- a/atcWCS/Forms/frmWCS.resx
+++ b/atcWCS/Forms/frmWCS.resx
@@ -136,6 +136,9 @@ Default layer and field names are automatically assigned the first time you use 
 
 Press F1 on each field for context sensitive help on each item.</value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
